--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     const loader = new THREE.GLTFLoader();
     loader.load(
-      './New Year Wishes - AR.glb', 
+      './New-Year-Wishes-AR.glb', 
       function (gltf) {
         scene.add(gltf.scene);
       },
