--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
+   loader.load(
+  './New-Year-Wishes-AR.glb',
+  function (gltf) {
+    scene.add(gltf.scene);
+  },
+  undefined,
+  function (error) {
+    console.error('An error occurred:', error);
+  }
+);
+
+    
     const loader = new THREE.GLTFLoader();
     loader.load(
       './New-Year-Wishes-AR.glb', 
