--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     document.body.appendChild(renderer.domElement);
 
    loader.load(
-  './New-Year-Wishes-AR.glb',
-  function (gltf) {
+  // './New-Year-Wishes-AR.glb',
+     './public/New-Year-Wishes-AR.glb',
+     function (gltf) {
     scene.add(gltf.scene);
   },
   undefined,
